header and logout alignment fix

--- a/blogger/src/Assets/Styles/header.css
+++ b/blogger/src/Assets/Styles/header.css
@@ -1,13 +1,14 @@
 .header {
-    padding: 30px;
-    text-align: center;
-    background: #1abc9c;
-    color: white;
-    font-size: 30px;
+  padding: 30px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+  display: flex;
+  border-bottom-left-radius: 50% 20%;
+  border-bottom-right-radius: 50% 20%;
+}
 
-    border-bottom-left-radius: 50% 20%;
-    border-bottom-right-radius: 50% 20%;
-  }
 .heading{
   font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
   font-size: 45px;
@@ -19,8 +20,6 @@
    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
    text-decoration: none;
    font-size: 30px;
-   top: -42px;
-   left: 44%;
 }
 
 a:link {
@@ -42,3 +41,6 @@ a:hover {
   text-decoration: none;
 }
 
+.spacer {
+  width: 6rem;
+}
